# web-scraper

./: .funcignore  .gitignore  main.py  package-lock.json  package.json  products.db  pyproject.toml  requirements.txt
PriceScraper/: __init__.py
crawler_sqlite/: crawler_main.py  send_sqlite.py
create-sqlite/: create-sqlite.js
create-sqlite-activity/: index.js
durable-functions-orchestrator/: index.js
get-all-categories-url/: get-all-categories-url.js
get-categories-urls-activity/: index.js
get-product/: get-products.js
get-products-activity/: index.js
get-sub-categories-url-activity/: index.js
get-sub-categories-urls/: get-sub-categories-urls.js
price_runner_spidy/: scrapy.cfg
price_runner_spidy/price_runner_spidy/: items.py  middlewares.py  pipelines.py  settings.py
price_runner_spidy/price_runner_spidy/spiders/: category_spider.py  product_spider.py
sftp-connection/: send-file-over-sftp.js  sftp-connection.js
sftp-connection-activity/: index.js
time-trigger-func/: function.json  index.js
