[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Itai Gramse <itai0004@stud.kea.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
lxml = "^4.9.1"
Scrapy = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


